...
        modifier = Modifier
            .fillMaxSize()
            .padding(paddingValues)
            .padding(horizontal = 20.dp)
    ) {
        TextField(
            label = { Text("Username") },
            value = state.credential.username,
            modifier = Modifier.fillMaxWidth(),
            onValueChange = { onEvent(SettingsEvent.SetUsername(it)) },
                isError = state.credential.username.isBlank(),
        )
        TextField(
            label = { Text("Password") },
            value = state.credential.password,
            onValueChange =  { onEvent(SettingsEvent.SetPassword(it)) },
            isError = state.credential.password.isBlank(),
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password),
            visualTransformation = if (state.showPassword) VisualTransformation.None else PasswordVisualTransformation(),
            modifier = Modifier.fillMaxWidth(),
...
